--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -4871,15 +4871,7 @@
                                     // Восстанавливаем позиции шашек из снимка
                                     positions.first = { ...showButtonSnapshot.positions.first };
                                     positions.second = { ...showButtonSnapshot.positions.second };
-                                    // playerTurn = showButtonSnapshot.turn || document.getElementById('turn-select').value;
-                                    // // Синхронизируем UI: чей ход и селекты
-                                    // const turnSelect = document.getElementById('turn-select');
-                                    // if (turnSelect) {
-                                    //     turnSelect.value = playerTurn;
-                                    //     updateTurnSelect();
-                                    // }
-                                    // updateSelectOptions('white');
-                                    // updateSelectOptions('black');
+                                    playerTurn = showButtonSnapshot.turn || document.getElementById('turn-select').value;
                                     updateBarSelects();
                                 } else {
                                     playerTurn = document.getElementById('turn-select').value;
